--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,10 @@ requires-python = ">=3.11"
 dependencies = [
     "aiohttp>=3.12.15",
     "google-genai>=1.38.0",
+    "google-generativeai>=0.8.0",
     "openai>=1.107.3",
     "pandas>=2.3.2",
     "plotly>=6.3.0",
     "streamlit>=1.49.1",
+    "spacy>=3.7.0",
 ]
